@@ -70,10 +70,10 @@
       but with a lexicographic ordering the same as the numeric ordering,
       so that range queries work correctly.
     -->
-    <fieldType name="sint" class="solr.SortableIntField" sortMissingLast="true" omitNorms="true"/>
-    <fieldType name="slong" class="solr.SortableLongField" sortMissingLast="true" omitNorms="true"/>
-    <fieldType name="sfloat" class="solr.SortableFloatField" sortMissingLast="true" omitNorms="true"/>
-    <fieldType name="sdouble" class="solr.SortableDoubleField" sortMissingLast="true" omitNorms="true"/>
+    <fieldType name="sint" class="solr.TrieIntField" sortMissingLast="true" omitNorms="true"/>
+    <fieldType name="slong" class="solr.TrieFloatField" sortMissingLast="true" omitNorms="true"/>
+    <fieldType name="sfloat" class="solr.TrieLongField" sortMissingLast="true" omitNorms="true"/>
+    <fieldType name="sdouble" class="solr.TrieDoubleField" sortMissingLast="true" omitNorms="true"/>
 
     <!--
      Numeric field types that index each value at various levels of precision
@@ -409,8 +409,13 @@
    <!-- We use long for integer since 64 bit ints are now common in PHP. -->
    <dynamicField name="is_*"  type="long"    indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="im_*"  type="long"    indexed="true"  stored="true" multiValued="true"/>
-   <dynamicField name="iss_*" type="slong"   indexed="true"  stored="true" multiValued="false"/>
-   <dynamicField name="ism_*" type="slong"   indexed="true"  stored="true" multiValued="true"/>
+   <!-- List of floats can be saved in a regular float field -->
+   <dynamicField name="fs_*"  type="float"   indexed="true"  stored="true" multiValued="false"/>
+   <dynamicField name="fm_*"  type="float"   indexed="true"  stored="true" multiValued="true"/>
+   <!-- List of booleans can be saved in a regular boolean field -->
+   <dynamicField name="bm_*"  type="boolean" indexed="true"  stored="true" multiValued="true"/>
+   <dynamicField name="bs_*"  type="boolean" indexed="true"  stored="true" multiValued="false"/>
+   <!-- Regular text (without processing) can be stored in a string field-->
    <dynamicField name="ss_*"  type="string"  indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="sm_*"  type="string"  indexed="true"  stored="true" multiValued="true"/>
    <!-- Normal text fields are for full text - the relevance of a match depends on the length of the text -->
@@ -427,11 +432,10 @@
    <dynamicField name="tem_*" type="edge_n2_kw_text" indexed="true" stored="true" multiValued="true" omitTermFreqAndPositions="true" />
    <dynamicField name="tws_*" type="text_ws" indexed="true" stored="true" multiValued="false"/>
    <dynamicField name="twm_*" type="text_ws" indexed="true" stored="true" multiValued="true"/>
+
    <!-- trie dates are preferred, so give them the 2 letter prefix -->
    <dynamicField name="ds_*"  type="tdate"   indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="dm_*"  type="tdate"   indexed="true"  stored="true" multiValued="true"/>
-   <dynamicField name="bm_*"  type="boolean" indexed="true"  stored="true" multiValued="true"/>
-   <dynamicField name="bs_*"  type="boolean" indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="its_*" type="tlong"   indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="itm_*" type="tlong"   indexed="true"  stored="true" multiValued="true"/>
    <dynamicField name="fts_*" type="tfloat"  indexed="true"  stored="true" multiValued="false"/>
@@ -442,14 +446,18 @@
         a small image in a search result using the data URI scheme -->
    <dynamicField name="xs_*"  type="binary"  indexed="false" stored="true" multiValued="false"/>
    <dynamicField name="xm_*"  type="binary"  indexed="false" stored="true" multiValued="true"/>
+   <!-- In rare cases a date rather than tdate is needed for sortMissingLast -->
+   <dynamicField name="dds_*" type="date"    indexed="true"  stored="true" multiValued="false"/>
+   <dynamicField name="ddm_*" type="date"    indexed="true"  stored="true" multiValued="true"/>
+   <!-- Sortable fields, good for sortMissingLast support &
+        We use long for integer since 64 bit ints are now common in PHP. -->
+   <dynamicField name="iss_*" type="slong"   indexed="true"  stored="true" multiValued="false"/>
+   <dynamicField name="ism_*" type="slong"   indexed="true"  stored="true" multiValued="true"/>
    <!-- In rare cases a sfloat rather than tfloat is needed for sortMissingLast -->
    <dynamicField name="fss_*" type="sfloat"  indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="fsm_*" type="sfloat"  indexed="true"  stored="true" multiValued="true"/>
    <dynamicField name="pss_*" type="sdouble" indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="psm_*" type="sdouble" indexed="true"  stored="true" multiValued="true"/>
-   <!-- In rare cases a date rather than tdate is needed for sortMissingLast -->
-   <dynamicField name="dds_*" type="date"    indexed="true"  stored="true" multiValued="false"/>
-   <dynamicField name="ddm_*" type="date"    indexed="true"  stored="true" multiValued="true"/>
    <!-- In case a 32 bit int is really needed, we provide these fields. 'h' is mnemonic for 'half word', i.e. 32 bit on 64 arch -->
    <dynamicField name="hs_*" type="integer" indexed="true"  stored="true" multiValued="false"/>
    <dynamicField name="hm_*" type="integer" indexed="true"  stored="true" multiValued="true"/>
